compiler/testData/diagnostics/tests/redeclarations/PackageRedeclaredByNestedClass.kt
// FILE: a.kt
package a.b

// FILE: b.kt
class <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>a<!> {
    class b
}
